# GFW

./: .CMakeLists.txt.kate-swp  .gitignore  CMakeLists.txt
TestApp/: main.cpp
data/: settings.lua
src/: Log.cpp  Log.hpp  Settings.cpp  Settings.hpp
